--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -8,7 +8,7 @@ import { MENU_ITEMS } from "../config";
 const { urlMenuItem } = Astro.props;
 ---
 
-<div
+<div id="menulp"
   class = "p-5 sticky top-0 pt-4 shadow-sm  z-30 flex h-auto w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-base-100 text-base-content"
 >
   <div class="navbar max-w-screen-lg p-0">
