modify the index for space between social networks and the download cv button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,14 +70,14 @@ const last_posts = posts.slice(0, 3);
           📚 Si no estoy codificando, estoy leyendo libros sobre educación financiera y emprendimiento. Me gusta trabajar en equipo, ayudar a los demás y mi personalidad es extrovertido.
           </p>
           
-          <button id="btn-download-index" class="btn text-lg btn-accent md:hidden hover:scale-105">
+          <button id="btn-download-index" class="btn text-lg btn-accent md:hidden hover:scale-105 mb-2">
             <Icon name="download" />Descargar CV
           </button>
 
         </article>
 
         <div
-          class="flex flex-row gap-16  animate-fade lg:animate-fade-right"
+          class="flex flex-row gap-10  animate-fade lg:animate-fade-right"
         >
           <a
             class="hover:text-primary"
