--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const last_posts = posts.slice(0, 3);
           class="prose dark:prose-invert prose-sm md:prose-base lg:prose-lg mb-2 animate-fade lg:animate-fade-right lg:max-w-none"
         >
           <p>
-            👋 Soy un Ingeniero de Sistemas de Ecuador apasionado con el desarrollo de software 💻, tanto del Backend como Frontend (Full Stack). Actualmente, trabajo en AustroRed 💼 que pertenece al sector financiero. Además, trabajo en la industria tecnológica desde 2019, ocupando puestos de ingeniería de desarrollo en grandes empresas como Banco del Austro y Mastermoto. También realizo proyectos como Freelancer.
+            👋 Soy un Ingeniero de Sistemas de Ecuador, apasionado con el desarrollo de software 💻, tanto del Backend como Frontend (Full Stack). Trabajo en Banco del Austro 💼, que pertenece al sector financiero. Además, trabajo en la industria tecnológica desde 2019, ocupando puestos de ingeniería de desarrollo en grandes empresas como AustroRed y Mastermoto. También realizo proyectos como Freelancer.
           </p>
           <p>
           📚 Si no estoy codificando, estoy leyendo libros sobre educación financiera y emprendimiento. Me gusta trabajar en equipo, ayudar a los demás y mi personalidad es extrovertido.
