Modificar las dimensiones de las imagenes

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ var year = pubDate.getFullYear(); //Get the year
     >
       <!-- Image -->
       <div class="min-h-50 max-h-60">
-        <Image width={1} height={1} format="webp" src={img} alt={title} class="w-full h-60 object-cover rounded-t-xl"/>
+        <Image width={960} height={640} src={img} alt={title} class="w-full h-60 object-cover rounded-t-xl"/>
       </div>
 
       <div class="card-body p-4">
